--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,18 +5,33 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    
+    <permission
+    	android:name="com.example.mapmobile.permission.MAPS_RECEIVE"
+    	android:protectionLevel="signature"/>
+	<uses-permission android:name="com.example.mapmobile.permission.MAPS_RECEIVE"/>
+	
+	<uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <meta-data
+   			android:name="com.google.android.maps.v2.API_KEY"
+    		android:value="AIzaSyDdPZNjSAXIx7XvWwlTKygF75X4fyiGRZI" />
         
         <activity
             android:name="com.example.mapmobile.Login"
