--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mapmobile"
     android:versionCode="2"
-    android:versionName="0.5" >
+    android:versionName="@string/VersionName" >
 
     <uses-sdk
         android:minSdkVersion="10" android:targetSdkVersion="15"/>
