WOW~~A lot of improvements!! included remove displayText, complete location searching & ListView filters, add some widget at login page, and implements the awesome Remember Me function!

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,7 @@
         
         <activity
             android:name="com.example.mapmobile.Login"
+            android:windowSoftInputMode="adjustPan"
             android:label="@string/app_name" >
             
             <intent-filter>
@@ -44,7 +45,10 @@
         
         <uses-library android:name="com.google.android.maps"/>
         
-        <activity android:name="Map2Activity"></activity>
+        <activity 
+            android:name="Map2Activity"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
         
     </application>
 
