--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,11 +6,19 @@
     android:versionCode="2"
     android:versionName="@string/Version"
     android:installLocation="auto" >
-
+	
+    <supports-screens
+            android:smallScreens="true"
+            android:normalScreens="true"
+            android:largeScreens="true"
+            android:resizeable="true"
+            android:anyDensity="true"/>
+    
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
@@ -52,6 +60,12 @@
         
         <activity 
             android:name="Map2Activity"
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait" >
+        </activity>
+        
+        <activity 
+            android:name="OffLineMode"
             android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait" >
         </activity>
